# take-home-2026

./: .env.example  .gitignore  DESIGN.md  INSTRUCTIONS.md  Makefile  PROCESS.md  README.md  ai.py  models.py  pyproject.toml  seed.py  structured_extraction.py
.cursor/rules/: code-philosophy.mdc  testing-philosophy.mdc
.github/workflows/: ci.yml
backend/: assemble.py  corpus.py
backend/api/: __init__.py  api.py
backend/assemble/: __init__.py  assemble.py
backend/extract/: __init__.py  dom_extraction.py  html_signals.py  mapping.py  script_blob.py  structured_extraction.py  urls.py
backend/identity/: __init__.py  resolver.py
backend/taxonomy/: __init__.py  prefilter.py
data/: allbirds-shoe.html  therealreal-gucci-bag.html
docs/: architecture.md  decisions.md  design.md  instructions.md  process.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/products/[id]/: page.tsx
frontend/components/: image-gallery.tsx  price-display.tsx  product-card.tsx  site-header.tsx
frontend/lib/: api.ts
frontend/types/: product.ts
tests/: test_assemble.py  test_dom_extraction.py  test_extract.py  test_identity_resolution.py  test_structured_extraction.py  test_taxonomy_prefilter.py
tests/evals/: conftest.py  test_api_e2e.py  test_assemble_evals.py
